--- a/front-1c/public/index.html
+++ b/front-1c/public/index.html
@@ -8,6 +8,8 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
 
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Nunito" />
+    
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body>
     <noscript>
